...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ZoneK1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="0"
                android:src="@mipmap/icon_build"
                android:textAlignment="center" />

...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ZoneK2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="0"
                android:src="@mipmap/icon_build"
                android:textAlignment="center" />

...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ZoneK3"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="0"
                android:src="@mipmap/icon_build"
                android:textAlignment="center" />

...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ZoneWP"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="0"
                android:src="@mipmap/icon_build"
                android:textAlignment="center" />

...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ZoneKJL"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="0"
                android:src="@mipmap/icon_build"
                android:textAlignment="center" />

...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ZoneHM"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="0"
                android:src="@mipmap/icon_build"
                android:textAlignment="center" />

...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ZoneRNP"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="0"
                android:src="@mipmap/icon_build"
                android:textAlignment="center" />

...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ZonePapaMama"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="0"
                android:src="@mipmap/icon_build"
                android:textAlignment="center" />

...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ZoneKS"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="0"
                android:src="@mipmap/icon_build"
                android:textAlignment="center" />

...
