<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tConstraintLayoutools="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="kmitl.kawin58070006.horyuni.controller.activity.MainActivity">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#FF4EB3F1">

        <include layout="@layout/custom_toolbar" />
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"></FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0.1"
        android:background="#a3a3a3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/linearList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgList"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#fff"
                android:src="@drawable/ic_home_blue" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearPost"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgAddPost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff"
                android:src="@drawable/ic_add_black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearZone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgZone"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="#fff"

                android:src="@drawable/ic_lotion_on_black" />


        </LinearLayout>
    </LinearLayout>
</LinearLayout>