<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context="kmitl.kawin58070006.horyuni.controller.fragment.PostFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="10dp"
                android:text="เลือกโซนหอ"
                android:textColor="#247fb7"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerTxtZone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="โซนหอ"
                android:padding="10dp"
                android:textAlignment="textStart" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="0.1"
                android:background="#767676" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="5dp"
                android:text="ชื่อหอ"
                android:textColor="#247fb7"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text=""
                android:textAlignment="textStart"
                tools:ignore="RtlCompat" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="ลายละเอียด"
                android:textColor="#247fb7"
                android:textSize="18sp" />


            <EditText
                android:id="@+id/editMoreDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:gravity="top"
                android:text=""
                android:textAlignment="textStart"
                tools:ignore="RtlCompat" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:text="เพิ่มรูปภาพ"
                android:textColor="#247fb7"
                android:textSize="18sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:weightSum="3">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_add_img" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginBottom="32dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:text="รูปหน้าปก"
                        android:textColor="#ff0000"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="2.18" />
                </android.support.constraint.ConstraintLayout>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_add_img" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_add_img" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="3">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_add_img" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_add_img" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="0dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:src="@drawable/ic_add_img" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnUpload"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#8fbe00"
        android:gravity="center"
        android:onClick="btnUpload_Click"
        android:text="โพสต์"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="18dp"
        tools:ignore="OnClick" />

</LinearLayout>
