...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                tools:ignore="MissingConstraints">

                <TextView
                    android:id="@+id/btn_detail"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:background="#8fbe00"
                    android:gravity="center"
                    android:text="รายละเอียด >"
                    android:textAlignment="center"
...
                app:layout_constraintHorizontal_bias="0.974"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#ff0000"
                    android:text="ลบ"
                    android:textColor="#fff" />
            </android.support.v7.widget.CardView>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
